<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="myName" type="com.tisu.about_me.MyName"/>
    </data>
<LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:contentDescription="@string/layout"
              android:paddingStart="@dimen/padding"
              android:paddingEnd="@dimen/padding">

    <TextView
            android:text="@={myName.name}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:textAlignment="center"
            style="@style/nameStyle" android:textColor="@color/blaak"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine|textPersonName"
            android:ems="10"
            android:id="@+id/name_editText"
            style="@style/nameStyle"
            android:textAlignment="center"
            android:textColor="@color/blaak"
            android:hint="@string/what_is_your_name"/>
    <Button
            android:text="@string/done_buttton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_margin="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:layout_gravity="center_horizontal"
    />
    <TextView
            android:text="@={myName.nickname}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nickName_Text"
            style="@style/nameStyle"
            android:textAlignment="center"
            android:visibility="gone"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/Star_image" android:contentDescription="@string/star_image"
            android:paddingTop="@dimen/smal_padding"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/name_scrol">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bio_text"
                android:contentDescription="@string/app_name"
                style="@style/nameStyle"
                android:text="@string/bio"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/blaak"/>
    </ScrollView>
</LinearLayout>
</layout>